# qppy

./: LICENSE  README.md  demo_notebook.ipynb  pyproject.toml
qppy/: __init__.py  instance.py  qpinstance.py
qppy/solvers/: __init__.py  interior_point.py  solver.py
tests/: test_qpinstance.py
