[project]
name = "qppy"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas Syrén",email = "filipandreassyren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "numba",
    "scipy (>=1.15.1,<2.0.0)"
]


[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = true
[tool.poetry.group.develop]
optional = true
[tool.poetry.group.develop.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
pandas = "^2.2.3"
nbformat = ">=4.2.0"

